Monday and Tuesday Initialization and Test Files

--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 
 <body>
   <header>
-    <h1>Ryker Swensen</h1>
+    <h1>JOSHUA SCHULZ</h1>
     <ul>
       <li>
         <a href="./index.html">
-          Home
+          HOME
         </a>
       </li>
       <li>
         <a href="./pages/about.html">
           ABOUT ME
+        </a>
+      </li>
+      <li>
+        <a href="./pages/test.html">
+          TEST PAGE
         </a>
       </li>
     </ul>
@@ -37,22 +42,24 @@
     <div class="content">
       <!--This is content card 1-->
       <div class="card">
+        <p>This is a box</p>
       </div>
       <!--This is content card 2-->
       <div class="card">
+        <p>I occupy the second box!</p>
       </div>
       <!--This is content card 3-->
       <div class="card">
+        <p>Behold, the third box!</p>
       </div>
     </div>
   </main>
 
   <footer>
-    <!--Add a link to your GitHub here-->
     <div class="gitHub">
       <b>GitHub</b>
       <p>
-        <a href="">My GitHub</a>
+        <a href="https://github.com/JSchulzzz">My GitHub</a>
       </p>
     </div>
     <div class="my_information">
@@ -65,8 +72,8 @@
     </div>
     <div class="contact">
       <b>Contact Me</b>
-      <p>Email: ADD EMAIL HERE</p>
-      <p>Phone: ADD NUMBER HERE</p>
+      <p>Email: joshnschulz@icloud.com</p>
+      <p>Phone: +1 801-660-0025</p>
     </div>
   </footer>
 </body>
