--- a/pages/about.html
+++ b/pages/about.html
@@ -19,12 +19,17 @@
             <ul>
                 <li>
                     <a href="../index.html">
-                        HOME
+                      HOME
                     </a>
                 </li>
                 <li>
                     <a href="./pages/about.html">
-                        ABOUT ME
+                      ABOUT ME
+                    </a>
+                </li>
+                <li>
+                    <a href="./pages/test.html">
+                      TEST PAGE
                     </a>
                 </li>
             </ul>
