--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Landing page for Ryker Swensen Fun Site">
-  <title>Summer Bootcamp Template</title>
+  <meta name="description" content="Landing page for Joshua Schulz Fun Site">
+  <title>Summer Bootcamp Website</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="./styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
         <p>Behold, the third box!</p>
       </div>
       <div class="card">
-        <p>AH, MORE BOXES!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+        <iframe class="video" src="https://www.youtube.com/embed/udIhl_a_WX4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </main>
