--- a/pages/about.html
+++ b/pages/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Landing page for all course work to be done in WDD 230 at BYU Idaho">
-    <title>Ryker Swensen Fun Site</title>
+    <title>Joshua Schlz Fun Site</title>
     <script src="../scripts/about.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -15,7 +16,7 @@
 <body>
     <div class="portal">
         <header>
-            <h1>Your Name Here</h1>
+            <h1>JOSHUA SCHULZ</h1>
             <ul>
                 <li>
                     <a href="../index.html">
@@ -23,12 +24,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/about.html">
+                    <a href="../pages/about.html">
                       ABOUT ME
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/test.html">
+                    <a href="../pages/test.html">
                       TEST PAGE
                     </a>
                 </li>
@@ -37,10 +38,7 @@
 
         <main>
             <div class="content">
-            <div class="info">
-                <p>
-                    Thank you for visiting my fun site!
-                </p>
+              <p class="me">HELLO MORTAL</p>
         </main>
 
         <footer>
@@ -48,7 +46,7 @@
             <div class="gitHub">
                 <b>GitHub</b>
                 <p>
-                    <a href="">My GitHub</a>
+                    <a href="https://github.com/JSchulzzz">My GitHub</a>
                 </p>
             </div>
             <div class="my_information">
@@ -60,8 +58,8 @@
             </div>
             <div class="contact">
                 <b>Contact Me</b>
-                <p>Email: ADD EMAIL HERE</p>
-                <p>Phone: ADD NUMBER HERE</p>
+                <p>Email: joshnschulz@icloud.com</p>
+                <p>Phone: +1 801-660-0025</p>
             </div>
         </footer>
     </div>
