--- a/pages/test.html
+++ b/pages/test.html
@@ -4,11 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="../styles/test.css"
+  <title>Test Page</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="../styles/test.css">
 </head>
   
 <body>
+    <header>
+    <h1>JOSHUA SCHULZ</h1>
+    <ul>
+      <li>
+        <a href="../index.html">
+          HOME
+        </a>
+      </li>
+      <li>
+        <a href="../pages/about.html">
+          ABOUT ME
+        </a>
+      </li>
+      <li>
+        <a href="../pages/test.html">
+          TEST PAGE
+        </a>
+      </li>
+    </ul>
+  </header>
   <h1>WOW</h1>
   <img src="https://upload.wikimedia.org/wikipedia/en/1/1f/Dead_cells_cover_art.png"> <img src="https://upload.wikimedia.org/wikipedia/en/c/c1/Risk_of_Rain_2.jpg">
   <p>Good games, yes</p>
