--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
   <script>
     function MagicEightBall() {
-      let answerList = ["In a way...", "Yes!", "Definitely.", "Don't count on it.", "Hard to tell right now. Ask later.", "What, do you think I'm magic or something?", "Fortunately, no.", "You should count on it.", "Uh...", "You will get what you ask, but at a price.", "No.", "It doesn't seem likely.", "It seems pretty likely.", "Hahaha... no.", "You wish.", "Yes, but not in the way you expect.", "Of course.", "Certainly not.", "Once all the stars and planets align, you'll have a chance.", "Make that one of your three wishes."]
+      let answerList = ["In a way...", "Yes!", "Definitely.", "Don't count on it.", "Hard to tell right now. Ask later.", "What, do you think I'm magic or something?", "Fortunately, no.", "You should count on it.", "Uh...", "You will get what you ask, but at a price.", "No.", "It doesn't seem likely.", "It seems pretty likely.", "Hahaha... no.", "You wish.", "Yes, but not in the way you expect.", "Of course.", "Certainly not.", "Once all the stars and planets align, you'll have a chance.", "Make that one of your three wishes.", "Outlook is good.", "Answer hazy...", "IDK", "I guess...?", "...", "You won't like the answer."]
       let text;
       let question = prompt("I'm the Magic 8 Ball! \n Ask me anything.");
       let pull = Math.floor(Math.random() * answerList.length);
