--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,9 @@
                 <p>Favorite food: Well, one of them is hawaiian haystacks</p>
                 <p>Favorite season: Winter by far</p>
                 <p>Favorite animal: I like both foxes and dragons a lot, though foxes are REAL.</p>
-                <p style="padding-bottom: 20%">Hobbies: Lots of video games, like Dead Cells, Hollow Knight, Terraria, and Pokemon. I like making music a lot, and enjoy listening to a lot of my favorite video game tracks. I'm decent at art and hope to make some digital art in the future. My previous two pursuits also help fuel my interest in the game development industry, which will hopefully become my job in the future</p>
+                <p>Hobbies: Lots of video games, like Dead Cells, Hollow Knight, Terraria, and Pokemon. I like making music a lot, and enjoy listening to a lot of my favorite video game tracks. I'm decent at art and hope to make some digital art in the future. My previous two pursuits also help fuel my interest in the game development industry, which will hopefully become my job in the future</p>
+                <p>Favorite Pokemon: I must state my favorites as a necessity of mentioning them in the paragaraph above. Trust me, it's mandatory. My favorites include like all the Eeveelutions, with Espeon, Leafeon, and Glaceon at the top. I also like Vulpix and Ninetales, especially the Alolan variants. Garchomp, Eelektross, and Dusk Lycanroc are some strong top contenders as well.</p>
+                <a href="https://www.dragonflycave.com/favorite.html">You can go here to find your own favorites! (If that's relevant to you... IDK maybe you can steal code.)</a>
                 
         </main>
 
